2004-04-28  David Schleef  <ds@schleef.org>

	Disable parsing of a lot of files that aren't part of the
	exported API.  Move corresponding template files to old/,
	waiting for removal when they don't contain anything
	interesting.
	* docs/gst/Makefile.am:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/cothreads.sgml:
	* docs/gst/tmpl/cothreads_compat.sgml:
	* docs/gst/tmpl/gettext.sgml:
	* docs/gst/tmpl/gobject2gtk.sgml:
	* docs/gst/tmpl/grammar.tab.sgml:
	* docs/gst/tmpl/gst-i18n-app.sgml:
	* docs/gst/tmpl/gst-i18n-lib.sgml:
	* docs/gst/tmpl/gst_private.sgml:
	* docs/gst/tmpl/gstaggregator.sgml:
	* docs/gst/tmpl/gstarch.sgml:
	* docs/gst/tmpl/gstatomic_impl.sgml:
	* docs/gst/tmpl/gstbufferstore.sgml:
	* docs/gst/tmpl/gstdata_private.sgml:
	* docs/gst/tmpl/gstdisksink.sgml:
	* docs/gst/tmpl/gstdisksrc.sgml:
	* docs/gst/tmpl/gstelementfactory.sgml:
	* docs/gst/tmpl/gstextratypes.sgml:
	* docs/gst/tmpl/gstfakesink.sgml:
	* docs/gst/tmpl/gstfakesrc.sgml:
	* docs/gst/tmpl/gstfdsink.sgml:
	* docs/gst/tmpl/gstfdsrc.sgml:
	* docs/gst/tmpl/gstfilesink.sgml:
	* docs/gst/tmpl/gstfilesrc.sgml:
	* docs/gst/tmpl/gsthttpsrc.sgml:
	* docs/gst/tmpl/gstidentity.sgml:
	* docs/gst/tmpl/gstindexfactory.sgml:
	* docs/gst/tmpl/gstmarshal.sgml:
	* docs/gst/tmpl/gstmd5sink.sgml:
	* docs/gst/tmpl/gstmultidisksrc.sgml:
	* docs/gst/tmpl/gstmultifilesrc.sgml:
	* docs/gst/tmpl/gstpadtemplate.sgml:
	* docs/gst/tmpl/gstpipefilter.sgml:
	* docs/gst/tmpl/gstschedulerfactory.sgml:
	* docs/gst/tmpl/gstsearchfuncs.sgml:
	* docs/gst/tmpl/gstshaper.sgml:
	* docs/gst/tmpl/gstspider.sgml:
	* docs/gst/tmpl/gstspideridentity.sgml:
	* docs/gst/tmpl/gststatistics.sgml:
	* docs/gst/tmpl/gsttee.sgml:
	* docs/gst/tmpl/gsttimecache.sgml:
	* docs/gst/tmpl/gsttypefind.sgml:
	* docs/gst/tmpl/gsttypefindfactory.sgml:
	* docs/gst/tmpl/gstxmlregistry.sgml:
	* docs/gst/tmpl/gthread-cothreads.sgml:
	* docs/gst/tmpl/old/cothreads.sgml:
	* docs/gst/tmpl/old/cothreads_compat.sgml:
	* docs/gst/tmpl/old/gettext.sgml: